added skeleton of client/index.html

--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,12 @@
-<!-- //Initial commit -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title> MLB Games </title>
+    <link rel="stylesheet" href="styles.css"/>
+  </head>
+  <body>
+    <p> TEST! </p>
+    <script src="scripts/app.js"></script>
+  </body>
+</html>
