--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <p> TEST! </p>
+    <script src="scripts/getJSON.js"></script>
     <script src="scripts/app.js"></script>
   </body>
 </html>
