--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <p> TEST! </p>
+    <script>
+      // creating a global variable
+      window.mlb = {};
+    </script>
     <script src="scripts/getJSON.js"></script>
     <script src="scripts/app.js"></script>
   </body>
