--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
+    <canvas id="display">
+      Sorry, but the device you are using does not support Canvas =(.
+    </canvas>
     <p> TEST! </p>
     <script>
       // creating a global variable
