added a resize listener in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <title> MLB Games </title>
     <link rel="stylesheet" href="styles.css"/>
   </head>
-  <body>
+  <body onresize="mlb.resize()">
     <canvas id="display">
       Sorry, but the device you are using does not support Canvas =(.
     </canvas>
