--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <title> MLB Games </title>
     <link rel="stylesheet" href="styles.css"/>
   </head>
-  <body onresize="mlb.resize()">
+  <body>
     <canvas id="display">
       Sorry, but the device you are using does not support Canvas =(.
     </canvas>
@@ -14,7 +14,7 @@
       // creating a global variable
       window.mlb = {};
     </script>
-    <script src="scripts/getJSON.js"></script>
+    <script src="scripts/utils.js"></script>
     <script src="scripts/app.js"></script>
   </body>
 </html>
