--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
-    <canvas id="display">
+    <!-- <canvas id="display">
       Sorry, but the device you are using does not support Canvas =(.
-    </canvas>
+    </canvas> -->
+    <div id="container"></div>
     <script>
       // creating a global variable
       window.mlb = {};
