added an image container in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,9 @@
     <!-- <canvas id="display">
       Sorry, but the device you are using does not support Canvas =(.
     </canvas> -->
-    <div id="container"></div>
+    <div id="container">
+      <div id="imageContainer"></div>
+    </div>
     <script>
       // creating a global variable
       window.mlb = {};
