--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title> MLB Games </title>
     <link rel="stylesheet" href="styles.css"/>
+    <link rel="icon" href="http://www.mlb.com/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="container">
