--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name='description' content='This app displays a carousel of MLB games from April 29, 2016.'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title> MLB Games </title>
     <link rel="stylesheet" href="styles.css"/>
     <link rel="icon" href="http://www.mlb.com/favicon.ico" type="image/x-icon" />
