--- a/client/index.html
+++ b/client/index.html
@@ -13,11 +13,12 @@
     <div id="container">
       <div id="imageContainer"></div>
     </div>
-    <script>
+    <!-- <script>
       // creating a global variable
       window.mlb = {};
-    </script>
-    <script src="scripts/utils.js"></script>
-    <script src="scripts/app.js"></script>
+    </script> -->
+    <!-- <script src="scripts/utils.js"></script>
+    <script src="scripts/app.js"></script> -->
+    <script src="build/mlb.min.js"></script>
   </body>
 </html>
